--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "huggingface-hub>=1.3.5",
+    "ipykernel>=7.1.0",
     "pandas>=3.0.0",
+    "python-dotenv>=1.2.1",
     "requests>=2.32.5",
 ]
 
